# nlp_process_text

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/tools/: text_process.py
src/utils/: files.py  regex.py  text_process.py
