[tool.poetry]
name = "nlp-text-process"
version = "0.1.0"
description = ""
authors = ["shun31y <shun.kato@elyza.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
black = "^24.4.2"
isort = "^5.13.2"
demoji = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
